# attribution-agent

./: .env.example  .gitignore  CLAUDE.md  DEPLOY_VERCEL.md  DeltaStream_Attribution_Agent_Sample_Output.xlsx  README.md  pyproject.toml  requirements.txt
clickhouse/01_tables/: 01_marketing_touchpoints.sql  02_conversions.sql  03_campaign_spend.sql  04_accounts.sql
clickhouse/02_views/: 00_won_journeys.sql  01_attribution_last_touch.sql  02_attribution_linear.sql  03_attribution_time_decay.sql  04_attribution_by_channel.sql  05_funnel_metrics.sql  06_cac_roi.sql
config/: settings.example.yaml
deltastream/: 00_stores.sql  build_deploy_all.sh  deploy_all.sql  teardown.sql
deltastream/01_streams/: ads_spend.sql  ga4_sessions.sql  hubspot_events.sql  outreach_activity.sql  share_of_model.sql
deltastream/02_changelogs/: salesforce_cdc.sql
deltastream/03_identity/: 01_web_identity_map.sql  02_resolved_touchpoints.sql  02_touchpoints.sql
deltastream/04_facts/: 01_conversions.sql  02_spend.sql  (+1 more)
docs/: deltastream_deploy.md  demo_script.md  demo_walkthrough.md  positioning.md  reference_architecture.md  ui_data_contract.md
public/: index.html
scripts/: build_static_ui.py  delete_legacy_topics.py  demo_down.sh  demo_init.sh  demo_serve.sh  demo_up.sh  make_settings.sh  mv_counts.py  run_sql.py  terminate_queries.py
tests/: test_board_view.py  test_generator.py  test_guardrails.py  test_live_generator.py  test_mcp.py  test_pipeline.py  test_sample_data.py
ui/: GUIDE.md  README.md  board.d.ts  boardClient.ts  deltastream-pulse.html  index.html  sample-board.json
(+38 files in other folders)
